--- a/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show-panel/edit-show-panel.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show-panel/edit-show-panel.component.html
@@ -1,5 +1,5 @@
 <div class="p-card p-fluid p-p-2 p-m-auto">
-    <h2 class="p-text-center">{{'image-show' | translate }}</h2>
+    <h2 class="p-text-center">{{'edit-show-panel.header' | translate }}</h2>
     <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col-12 p-md-6">
             <div class="p-inputgroup">
