--- a/School-Managment-Frontend/src/main/web/src/app/image-show/image-list/image-list.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/image-show/image-list/image-list.component.html
@@ -84,4 +84,4 @@
 </p-tree>
 <p-confirmDialog></p-confirmDialog>
 <app-upload-document [(displayDialog)]="uploadDocument" *ngIf="uploadDocument"></app-upload-document>
-<app-upload-image-show [(displayDialog)]="uploadImageShow" *ngIf="uploadImageShow"></app-upload-image-show>
+<app-upload-show [(displayDialog)]="uploadImageShow" *ngIf="uploadImageShow"></app-upload-show>
