--- a/School-Managment-Frontend/src/main/web/src/app/monitor/monitor-dashboard/monitor-card/monitor-card.component.scss
+++ b/School-Managment-Frontend/src/main/web/src/app/monitor/monitor-dashboard/monitor-card/monitor-card.component.scss
@@ -5,5 +5,18 @@
 }
 
 .no-image-show-text {
-    transform: rotate(-35deg);
+  transform: rotate(-35deg);
+}
+
+.monitor-header {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.loading{
+  height: 142px;
+}
+
+.monitor-tag{
+  float: right;
 }
