--- a/School-Managment-Frontend/src/main/web/src/app/monitor/monitor-dashboard/monitor-dashboard.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/monitor/monitor-dashboard/monitor-dashboard.component.html
@@ -1,7 +1,7 @@
 <p-dataView [value]="monitors" layout="grid">
     <ng-template let-monitor pTemplate="gridItem">
-        <div class="p-col-12 p-md-6">
-            <app-monitor-card [monitor]="monitor"></app-monitor-card>
+        <div class="p-col-12 p-md-6 monitor-card">
+            <app-monitor-card [monitor]="monitor" [area]="area" ></app-monitor-card>
         </div>
     </ng-template>
 </p-dataView>
