--- a/School-Managment-Frontend/src/main/web/src/app/auth/role/role-list/role-list.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/auth/role/role-list/role-list.component.html
@@ -1,4 +1,4 @@
-<div style="text-align: center; margin: 15px;">
+<div >
     <p-table [value]="roles" selectionMode="single" [(selection)]="selectedRole" (onRowSelect)="onRowSelect($event)"
         [paginator]="true" [rows]="15">
         <!-- <ng-template pTemplate="caption">
